--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Yudish Tira
-tagline: "<a target='_blank' href='https://en.wikipedia.org/wiki/Yudhishthira'>I'm the eldest.</a> I don't lie, I never will!"
-picture: yudish.jpg #keep a 100x100 image inside images folder.
+title: Princesa Jujuba
+tagline: "De mim você pode esperar tudo, menos o que você está pensando! <a target='_blank' href='https://chat.whatsapp.com/KzXNKlKQjwZIPpBUBV1Jsj'>Estou no WhatsApp</a> "
+picture: jujuba.jpg #keep a 100x100 image inside images folder.
 email: hello@email.com
 description: > # this means to ignore newlines until "baseurl:"
   Yudish is a minimal Jekyll theme for content oriented websites with less distractions.
-baseurl: "/yudish" # the subpath of your site, e.g. /blog
+baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://webjeda.com" # the base hostname & protocol for your site
 brand-color: "#e74c3c"
 permalink: ":title/"
@@ -30,8 +30,8 @@ highlighter: rouge
 sass:
   style: compressed
 
-disqus-shortname: webjeda-sample
-analytics: UA-83979019-1
+disqus-shortname: geanramos
+analytics: UA-xxxx
 
 include: [_pages]
 
