--- a/_config.yml
+++ b/_config.yml
@@ -7,13 +7,13 @@
 
 # Site settings
 title: Princesa Jujuba
-tagline: "De mim você pode esperar tudo, menos o que você está pensando! <a target='_blank' href='https://chat.whatsapp.com/KzXNKlKQjwZIPpBUBV1Jsj'>Estou no WhatsApp</a> "
+tagline: "De mim você pode esperar tudo, menos o que você está pensando!"
 picture: jujuba.jpg #keep a 100x100 image inside images folder.
 email: hello@email.com
 description: > # this means to ignore newlines until "baseurl:"
-  Yudish is a minimal Jekyll theme for content oriented websites with less distractions.
+  Jujuba.ml.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "http://webjeda.com" # the base hostname & protocol for your site
+url: "http://www.jujuba.ml" # the base hostname & protocol for your site
 brand-color: "#e74c3c"
 permalink: ":title/"
 
