--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ email: hello@email.com
 description: > # this means to ignore newlines until "baseurl:"
   Jujuba.ml.
 baseurl: "/" # the subpath of your site, e.g. /blog
-url: "https://www.jujuba.ml" # the base hostname & protocol for your site
+url: "https://jujuba.ml" # the base hostname & protocol for your site
 brand-color: "#E30766"
 permalink: ":title/"
 
